--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "MIT",
     "dependencies": {
         "fs": "^3.10.0",
+		"concat-files": "^0.0.0",
         "userhome": "1.0.0",
         "path": "^2.11.0"        
     },
