--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "concat-files": "^0.1.0",
-    "fs": "^0.0.1",
+    "fs": "^0.0.1-security",
     "path": "^0.12.0",
     "userhome": "1.0.0"
   },
