--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "journ",
   "version": "0.1.6",
   "description": "Journaling via CLI with flat .md files ",
+  "keywords": [
+      "weekly",
+      "markdown",
+      "diary",
+      "journal",
+      "notes"
+  ],
+  "author": "Kyle Dinh <kyledinh@gmail.com> (http://kyledinh.com)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kyledinh/journ"
+  },
   "main": "journ.js",
   "bin": {
     "journ": "journ.js"
@@ -12,12 +25,6 @@
   ],
   "scripts": {
     "test": "tap test"
-  },
-  "author": "Kyle Dinh <kyledinh@gmail.com> (http://kyledinh.com)",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kyledinh/journ"
   },
   "dependencies": {
     "concat-files": "^0.1.0",
