--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.6",
   "description": "Journaling via CLI with flat .md files ",
   "keywords": [
-      "weekly",
-      "markdown",
-      "diary",
-      "journal",
-      "notes"
+    "weekly",
+    "markdown",
+    "diary",
+    "journal",
+    "notes"
   ],
   "author": "Kyle Dinh <kyledinh@gmail.com> (http://kyledinh.com)",
   "license": "MIT",
@@ -29,6 +29,7 @@
   "dependencies": {
     "concat-files": "^0.1.0",
     "fs": "^0.0.1-security",
+    "markdown-pdf": "^8.0.0",
     "path": "^0.12.0",
     "userhome": "1.0.0"
   },
